     [sshtty.c]
     clear IUCLC in enter_raw_mode; from rob@pitman.co.za; ok deraadt@, fgs@
   - deraadt@cvs.openbsd.org 2003/07/18 01:54:25
     [scp.c]
     userid is unsigned, but well, force it anyways; andrushock@korovino.net
   - djm@cvs.openbsd.org 2003/07/19 00:45:53
     [sftp-int.c]
     fix sftp filename parsing for arguments with escaped quotes. bz #517;
     ok markus

20030714
 - (dtucker) [acconfig.h configure.ac port-aix.c] Older AIXes don't declare
   loginfailed at all, so assume 3-arg loginfailed if not declared.
 - (dtucker) [port-aix.h] Work around name collision on AIX for r_type by
   undef'ing it.
 - (dtucker) Bug #543: [configure.ac port-aix.c port-aix.h]
   Call setauthdb() before loginfailed(), which may load password registry-
   specific functions.  Based on patch by cawlfiel at us.ibm.com.
 - (dtucker) [port-aix.h] Fix prototypes.
 - (dtucker) OpenBSD CVS Sync
   - avsm@cvs.openbsd.org 2003/07/09 13:58:19
     [key.c]
     minor tweak: when generating the hex fingerprint, give strlcat the full
     bound to the buffer, and add a comment below explaining why the
     zero-termination is one less than the bound.  markus@ ok
   - markus@cvs.openbsd.org 2003/07/10 14:42:28
     [packet.c]
     the 2^(blocksize*2) rekeying limit is too expensive for 3DES,
     blowfish, etc, so enforce a 1GB limit for small blocksizes.
   - markus@cvs.openbsd.org 2003/07/10 20:05:55
     [sftp.c]
     sync usage with manpage, add missing -R

20030708
 - (dtucker) [acconfig.h auth-passwd.c configure.ac session.c port-aix.[ch]]
   Include AIX headers for authentication functions and make calls match
   prototypes.  Test for and handle 3-arg and 4-arg variants of loginfailed.
 - (dtucker) [session.c] Check return value of setpcred().
 - (dtucker) [auth-passwd.c auth.c session.c sshd.c port-aix.c port-aix.h]
   Convert aixloginmsg into platform-independant Buffer loginmsg.

20030707
 - (dtucker) [configure.ac] Bug #600: Check that getrusage is declared before